--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
             <thead>
                 <tr>
                     <th >
-                        <a href="sayfa1.html"><img src="../İmages/Movieposters/Titanic.jpg" alt=""></a>
+                        <a href="sayfa1.html"><img src="../Movieposters/Titanic.jpg" alt=""></a>
                     </th>
                     <th>
-                        <a href="sayfa2.html"><img src="../İmages/Movieposters/Avengers.jpg" alt=""></a>
+                        <a href="sayfa2.html"><img src="../Movieposters/Avengers.jpg" alt=""></a>
                     </th>
                     <th>
-                        <a href="sayfa3.html"><img src="../İmages/Movieposters/Avatar.jpg" alt=""></a>
+                        <a href="sayfa3.html"><img src="../Movieposters/Avatar.jpg" alt=""></a>
                     </th>
                     <th>
-                        <a href="sayfa4.html"><img src="../İmages/Movieposters/Fast and Furious 8.jpg" alt=""></a>
+                        <a href="sayfa4.html"><img src="../Movieposters/Fast and Furious 8.jpg" alt=""></a>
                     </th>
                 </tr>
             </thead>
